syntax = "proto3";

option csharp_namespace = "GrcpOyasumiCore";

package OyasumiCore;

service OyasumiCore {
    rpc OnOverlaySidecarStart (OverlaySidecarStartArgs) returns (Empty) {}
    rpc OnElevatedSidecarStart (ElevatedSidecarStartArgs) returns (Empty) {}
}

message OverlaySidecarStartArgs {
    uint32 port = 1;
    uint32 pid = 2;
}

message ElevatedSidecarStartArgs  {
    uint32 port = 1;
    uint32 pid = 2;
}

message Empty {}